# apk-lists

./: Dockerfile  main.py  pyproject.toml
templates/: list.html
